Add: migrate latest

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts --fix",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
-    "migrate": "npm run knex -- migrate:make "
+    "migrate:make": "npm run knex -- migrate:make ",
+    "migrate:latest": "npm run knex -- migrate:latest"
   },
   "keywords": [],
   "author": "",
