--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint src --ext .ts --fix",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "migrate:make": "npm run knex -- migrate:make ",
-    "migrate:latest": "npm run knex -- migrate:latest"
+    "migrate:latest": "npm run knex -- migrate:latest",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,12 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.33.0",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.1"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
